fix: Add loging check for endpoints